# PeasyGUI

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
misc/: PeasyGUI_all_controls.ini  _start_all_controls.command  _start_all_controls_change_gui.command  _start_instant_client.command  docu_dump.txt  history_of_instant_client.txt  instant_client.py
packaging/: start_PeasyGUI.bat  start_PeasyGUI.sh
packaging/examples/1_py_tcp_greet/: change_gui.command  change_gui.sh  greet.py  start_example.command  start_example.sh
packaging/examples/2_py_filebased_greet/: PeasyGUI_greet.ini  change_gui.command  change_gui.sh  filebasedclient.py  greet.py  start_example.command
packaging/examples/3_c_greet/: CMakeLists.txt  change_gui.command  change_gui.sh  main.c  start_example.command  start_example.sh  tcp_connection.h
packaging/examples/4_py_imageviewer/: PeasyGUI_viewer.ini  change_gui.command  change_gui.sh  imageviewer.py  start_example.command  start_example.sh
packaging/examples/5_py_fileprefixer/: fileprefixer.py  start_example.command  start_example.sh
packaging/linux/: Installation_steps.txt  identify_needs_on_target.py  release.py
packaging/macos/: Installation_steps.txt  Unlock.command  release.command
packaging/windows/: Installation_steps.txt  release.bat
resources/: Icons.ods  resources.qrc
src/: aboutaccess.cpp  aboutaccess.h  aboutdialog.cpp  aboutdialog.h  appconfig.h  apppaths.cpp  apppaths.h  button.cpp  button.h  checkbox.cpp  checkbox.h  control.cpp  control.h  controlhighlighter.cpp  controlhighlighter.h  controlprototypes.cpp  controlprototypes.h  controlserializer.cpp  controlserializer.h  droparea.cpp  droparea.h  dropdown.cpp  dropdown.h  filebasedserver.cpp  filebasedserver.h  geometryhandles.cpp  geometryhandles.h  iconfreetooltip.cpp  iconfreetooltip.h  imageview.cpp  imageview.h  initializer.cpp  initializer.h  label.cpp  label.h  listbox.cpp  listbox.h  main.cpp  mainwin.cpp  mainwin.h  (+21 more)
tests/: CMakeLists.txt  mockcontrol.h  test_requestchecker.cpp  test_requestparser.cpp
third_party_licenses/: LICENSE.GPL3  LICENSE.LGPL3
